--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
+library(bboushiny)
 ```
 
 # bboushiny
@@ -89,3 +90,7 @@ Please report any [issues](https://github.com/poissonconsulting/bboushiny/issues
 ## Code of Conduct
 
 Please note that the bboushiny project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+
+```{r, results = "asis", echo = FALSE}
+cat(licensing_md())
+```
